main layout done

--- a/index.html
+++ b/index.html
@@ -3,24 +3,62 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="https://use.typekit.net/wur8ael.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Igor Lech | Frontend Developer</title>
   </head>
   <body>
     <main>
       <section class="underconst">
-        <div class="underconst-title">
-          <h1>Igor Lech</h1>
-          <h2>Frontend Developer</h2>
+        <div class="underconst-heading">
+          <div class="underconst-image">
+            <img src="./src/assets/main.png" alt="Igor Lech" class="igor-img" />
+          </div>
+          <div class="underconst-titles">
+            <h1>Igor Lech</h1>
+            <h2>Frontend Developer</h2>
+          </div>
         </div>
         <div class="underconst-subtitle">
           <p>
-            My portfolio is currently being rebuild. The website will be
+            My portfolio is currently being rebuilt. The website will be
             available soon. Meanwhile, you can visit these links below to check
             my profile and projects.
           </p>
         </div>
-        <div class="underconst-links"></div>
+        <div class="underconst-links">
+          <div class="linkswrapper">
+            <a
+              href="https://www.linkedin.com/in/igor-lech-347b0a21a/"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="underconst-link"
+              ><img
+                src="./src/assets/contact-ln.png"
+                class="contact-icon"
+                alt="LinkedIn"
+            /></a>
+            <a
+              href="https://github.com/igorlech"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="underconst-link"
+              ><img
+                src="./src/assets/contact-gh.png"
+                class="contact-icon"
+                alt="GitHub"
+            /></a>
+            <a href="mailto:igor.lech@poczta.onet.pl" class="underconst-link"
+              ><img
+                src="./src/assets/contact-mail.png"
+                class="contact-icon"
+                alt="Mail"
+            /></a>
+          </div>
+        </div>
+        <div class="shape">
+          <img src="./src/assets/line.svg" alt="" />
+        </div>
       </section>
     </main>
     <script type="module" src="/src/main.ts"></script>
