main layout corrections

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <div class="underconst-subtitle">
           <p>
-            My portfolio is currently being rebuilt. The website will be
+            My portfolio is currently being rebuilt and the website will be
             available soon. Meanwhile, you can visit these links below to check
             my profile and projects.
           </p>
