--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logomain.png" />
     <link rel="stylesheet" href="https://use.typekit.net/wur8ael.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Igor Lech | Frontend Developer</title>
