--- a/index.html
+++ b/index.html
@@ -59,8 +59,164 @@
         <div class="shape">
           <img src="./src/assets/line.svg" alt="" />
         </div>
+        <div class="wave">
+          <svg
+            width="100%"
+            height="100%"
+            id="svg"
+            viewBox="0 0 1440 690"
+            xmlns="http://www.w3.org/2000/svg"
+            class="transition duration-300 ease-in-out delay-150"
+          >
+            <style>
+              .path-0 {
+                animation: pathAnim-0 4s;
+                animation-timing-function: linear;
+                animation-iteration-count: infinite;
+              }
+              @keyframes pathAnim-0 {
+                0% {
+                  d: path(
+                    "M 0,700 C 0,700 0,175 0,175 C 133.7333333333333,193.66666666666666 267.4666666666666,212.33333333333331 422,198 C 576.5333333333334,183.66666666666669 751.8666666666668,136.33333333333331 925,127 C 1098.1333333333332,117.66666666666667 1269.0666666666666,146.33333333333334 1440,175 C 1440,175 1440,700 1440,700 Z"
+                  );
+                }
+                25% {
+                  d: path(
+                    "M 0,700 C 0,700 0,175 0,175 C 199.33333333333331,149.93333333333334 398.66666666666663,124.86666666666666 536,122 C 673.3333333333334,119.13333333333334 748.6666666666667,138.4666666666667 889,151 C 1029.3333333333333,163.5333333333333 1234.6666666666665,169.26666666666665 1440,175 C 1440,175 1440,700 1440,700 Z"
+                  );
+                }
+                50% {
+                  d: path(
+                    "M 0,700 C 0,700 0,175 0,175 C 187.59999999999997,174.2 375.19999999999993,173.4 518,166 C 660.8000000000001,158.6 758.8,144.6 905,145 C 1051.2,145.4 1245.6,160.2 1440,175 C 1440,175 1440,700 1440,700 Z"
+                  );
+                }
+                75% {
+                  d: path(
+                    "M 0,700 C 0,700 0,175 0,175 C 142,166.46666666666667 284,157.93333333333334 446,173 C 608,188.06666666666666 790,226.73333333333332 959,231 C 1128,235.26666666666668 1284,205.13333333333333 1440,175 C 1440,175 1440,700 1440,700 Z"
+                  );
+                }
+                100% {
+                  d: path(
+                    "M 0,700 C 0,700 0,175 0,175 C 133.7333333333333,193.66666666666666 267.4666666666666,212.33333333333331 422,198 C 576.5333333333334,183.66666666666669 751.8666666666668,136.33333333333331 925,127 C 1098.1333333333332,117.66666666666667 1269.0666666666666,146.33333333333334 1440,175 C 1440,175 1440,700 1440,700 Z"
+                  );
+                }
+              }
+            </style>
+            <defs>
+              <linearGradient id="gradient" x1="0%" y1="50%" x2="100%" y2="50%">
+                <stop offset="5%" stop-color="#c4dffd"></stop>
+                <stop offset="95%" stop-color="#a8d0ff"></stop>
+              </linearGradient>
+            </defs>
+            <path
+              d="M 0,700 C 0,700 0,175 0,175 C 133.7333333333333,193.66666666666666 267.4666666666666,212.33333333333331 422,198 C 576.5333333333334,183.66666666666669 751.8666666666668,136.33333333333331 925,127 C 1098.1333333333332,117.66666666666667 1269.0666666666666,146.33333333333334 1440,175 C 1440,175 1440,700 1440,700 Z"
+              stroke="none"
+              stroke-width="0"
+              fill="url(#gradient)"
+              fill-opacity="0.4"
+              class="transition-all duration-300 ease-in-out delay-150 path-0"
+            ></path>
+            <style>
+              .path-1 {
+                animation: pathAnim-1 4s;
+                animation-timing-function: linear;
+                animation-iteration-count: infinite;
+              }
+              @keyframes pathAnim-1 {
+                0% {
+                  d: path(
+                    "M 0,700 C 0,700 0,350 0,350 C 114.66666666666669,331.4666666666667 229.33333333333337,312.93333333333334 393,316 C 556.6666666666666,319.06666666666666 769.3333333333333,343.7333333333333 952,353 C 1134.6666666666667,362.2666666666667 1287.3333333333335,356.1333333333333 1440,350 C 1440,350 1440,700 1440,700 Z"
+                  );
+                }
+                25% {
+                  d: path(
+                    "M 0,700 C 0,700 0,350 0,350 C 196.2666666666667,365.73333333333335 392.5333333333334,381.46666666666664 561,384 C 729.4666666666666,386.53333333333336 870.1333333333332,375.8666666666667 1012,368 C 1153.8666666666668,360.1333333333333 1296.9333333333334,355.06666666666666 1440,350 C 1440,350 1440,700 1440,700 Z"
+                  );
+                }
+                50% {
+                  d: path(
+                    "M 0,700 C 0,700 0,350 0,350 C 198.66666666666669,351.20000000000005 397.33333333333337,352.40000000000003 538,353 C 678.6666666666666,353.59999999999997 761.3333333333333,353.59999999999997 902,353 C 1042.6666666666667,352.40000000000003 1241.3333333333335,351.20000000000005 1440,350 C 1440,350 1440,700 1440,700 Z"
+                  );
+                }
+                75% {
+                  d: path(
+                    "M 0,700 C 0,700 0,350 0,350 C 150.8,318.5333333333333 301.6,287.06666666666666 466,307 C 630.4,326.93333333333334 808.4000000000001,398.2666666666667 973,414 C 1137.6,429.7333333333333 1288.8,389.8666666666667 1440,350 C 1440,350 1440,700 1440,700 Z"
+                  );
+                }
+                100% {
+                  d: path(
+                    "M 0,700 C 0,700 0,350 0,350 C 114.66666666666669,331.4666666666667 229.33333333333337,312.93333333333334 393,316 C 556.6666666666666,319.06666666666666 769.3333333333333,343.7333333333333 952,353 C 1134.6666666666667,362.2666666666667 1287.3333333333335,356.1333333333333 1440,350 C 1440,350 1440,700 1440,700 Z"
+                  );
+                }
+              }
+            </style>
+            <defs>
+              <linearGradient id="gradient" x1="0%" y1="50%" x2="100%" y2="50%">
+                <stop offset="5%" stop-color="#c4dffd"></stop>
+                <stop offset="95%" stop-color="#a8d0ff"></stop>
+              </linearGradient>
+            </defs>
+            <path
+              d="M 0,700 C 0,700 0,350 0,350 C 114.66666666666669,331.4666666666667 229.33333333333337,312.93333333333334 393,316 C 556.6666666666666,319.06666666666666 769.3333333333333,343.7333333333333 952,353 C 1134.6666666666667,362.2666666666667 1287.3333333333335,356.1333333333333 1440,350 C 1440,350 1440,700 1440,700 Z"
+              stroke="none"
+              stroke-width="0"
+              fill="url(#gradient)"
+              fill-opacity="0.53"
+              class="transition-all duration-300 ease-in-out delay-150 path-1"
+            ></path>
+            <style>
+              .path-2 {
+                animation: pathAnim-2 4s;
+                animation-timing-function: linear;
+                animation-iteration-count: infinite;
+              }
+              @keyframes pathAnim-2 {
+                0% {
+                  d: path(
+                    "M 0,700 C 0,700 0,525 0,525 C 199.59999999999997,524.3333333333333 399.19999999999993,523.6666666666666 562,510 C 724.8000000000001,496.33333333333337 850.8,469.6666666666667 991,470 C 1131.2,470.3333333333333 1285.6,497.66666666666663 1440,525 C 1440,525 1440,700 1440,700 Z"
+                  );
+                }
+                25% {
+                  d: path(
+                    "M 0,700 C 0,700 0,525 0,525 C 128.53333333333336,495.79999999999995 257.0666666666667,466.59999999999997 435,466 C 612.9333333333333,465.40000000000003 840.2666666666667,493.4000000000001 1016,508 C 1191.7333333333333,522.5999999999999 1315.8666666666668,523.8 1440,525 C 1440,525 1440,700 1440,700 Z"
+                  );
+                }
+                50% {
+                  d: path(
+                    "M 0,700 C 0,700 0,525 0,525 C 125.19999999999999,533.1333333333333 250.39999999999998,541.2666666666667 420,554 C 589.6,566.7333333333333 803.5999999999999,584.0666666666667 981,580 C 1158.4,575.9333333333333 1299.2,550.4666666666667 1440,525 C 1440,525 1440,700 1440,700 Z"
+                  );
+                }
+                75% {
+                  d: path(
+                    "M 0,700 C 0,700 0,525 0,525 C 190.13333333333333,507.40000000000003 380.26666666666665,489.80000000000007 542,507 C 703.7333333333333,524.1999999999999 837.0666666666666,576.1999999999999 982,585 C 1126.9333333333334,593.8000000000001 1283.4666666666667,559.4000000000001 1440,525 C 1440,525 1440,700 1440,700 Z"
+                  );
+                }
+                100% {
+                  d: path(
+                    "M 0,700 C 0,700 0,525 0,525 C 199.59999999999997,524.3333333333333 399.19999999999993,523.6666666666666 562,510 C 724.8000000000001,496.33333333333337 850.8,469.6666666666667 991,470 C 1131.2,470.3333333333333 1285.6,497.66666666666663 1440,525 C 1440,525 1440,700 1440,700 Z"
+                  );
+                }
+              }
+            </style>
+            <defs>
+              <linearGradient id="gradient" x1="0%" y1="50%" x2="100%" y2="50%">
+                <stop offset="5%" stop-color="#c4dffd"></stop>
+                <stop offset="95%" stop-color="#a8d0ff"></stop>
+              </linearGradient>
+            </defs>
+            <path
+              d="M 0,700 C 0,700 0,525 0,525 C 199.59999999999997,524.3333333333333 399.19999999999993,523.6666666666666 562,510 C 724.8000000000001,496.33333333333337 850.8,469.6666666666667 991,470 C 1131.2,470.3333333333333 1285.6,497.66666666666663 1440,525 C 1440,525 1440,700 1440,700 Z"
+              stroke="none"
+              stroke-width="0"
+              fill="url(#gradient)"
+              fill-opacity="1"
+              class="transition-all duration-300 ease-in-out delay-150 path-2"
+            ></path>
+          </svg>
+        </div>
       </section>
     </main>
     <script type="module" src="/src/main.ts"></script>
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
   </body>
 </html>
